--- a/src/app/Components/list-book/list-book.component.html
+++ b/src/app/Components/list-book/list-book.component.html
@@ -1,1 +1,26 @@
-<p>list-book works!</p>
+<div class="container mt-5">
+    <h1>Lista de libros</h1>
+    <div class="row">
+        <div class="col mb-4" *ngFor="let b of allBooks">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">{{b.name}}</h5>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><b>Autor: </b> {{b.author}}
+                        </li>
+                        <li class="list-group-item"><b>Número de páginas: </b>
+                            {{b.pageNumber}} </li>
+                        <li class="list-group-item"><b>Editorial: </b>
+                            {{b.publisher}} </li>
+                        <li class="list-group-item"><b>Fecha de publicación:
+                            </b> {{b.publicationDate}} </li>
+                    </ul>
+                    <div *ngIf="roleUser">
+                        <a class="card-link" (click)="updateBook(b)">Modificar</a>
+                        <a class="card-link" (click)="removeBook(b._id)">Eliminar</a>    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
